--- a/website/src/main/webapp/WEB-INF/web.xml
+++ b/website/src/main/webapp/WEB-INF/web.xml
@@ -5,4 +5,10 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
          http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+         <jsp-config>
+		    <taglib>
+		        <taglib-uri>http://java.sun.com/jstl/core</taglib-uri>
+		        <taglib-location>/WEB-INF/tld/c.tld</taglib-location>
+		    </taglib>
+		</jsp-config> 
 </web-app>
