--- a/website/pom.xml
+++ b/website/pom.xml
@@ -69,6 +69,17 @@
 	    <artifactId>spring-webmvc</artifactId>
 	    <version>5.1.3.RELEASE</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.easymock</groupId>
+	    <artifactId>easymock</artifactId>
+	    <version>4.0.2</version>
+	    <scope>test</scope>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-core</artifactId>
+	    <version>2.11.1</version>
+	</dependency>	
   </dependencies>
   <build>
     <finalName>website</finalName>
