--- a/website/src/main/resources/filters/dev.properties
+++ b/website/src/main/resources/filters/dev.properties
@@ -1,14 +1,14 @@
 #Log4j2 configuration
-#log4jConfigFile=/resources/log4j2.xml
-#log4j.filename=/home/owen/development/logs/UserService/UserService.log
-#log4j.patternlayout=%d{ISO8601} [%t] %-5level %logger{36} - %msg%n%throwable{full}
-#log4j.filenamePattern=/home/owen/development/logs/LoginApp/LoginApp-%d{yyyy-dd-MM}-%i.log.gz
-#log4j.springframework.console.level=debug
-#log4j.springframework.file.level=debug
-#log4j.userservice.console.level=debug
-#log4j.userservice.file.level=debug
-#log4j.root.console.level=debug
-#log4j.root.file.level=debug
+log4jConfigFile=/resources/log4j2.xml
+log4j.filename=/home/owen/development/logs/website/website.log
+log4j.patternlayout=%d{ISO8601} [%t] %-5level %logger{36} - %msg%n%throwable{full}
+log4j.filenamePattern=/home/owen/development/logs/website/website-%d{yyyy-dd-MM}-%i.log.gz
+log4j.springframework.console.level=debug
+log4j.springframework.file.level=debug
+log4j.website.console.level=debug
+log4j.website.file.level=debug
+log4j.root.console.level=debug
+log4j.root.file.level=debug
 
 #PostgreSQL configuration
 #connection.username=postgres
