Added configuration for Apache Tiles.

--- a/website/pom.xml
+++ b/website/pom.xml
@@ -70,6 +70,11 @@
 	    <version>5.1.3.RELEASE</version>
 	</dependency>
 	<dependency>
+	    <groupId>org.apache.tiles</groupId>
+	    <artifactId>tiles-jsp</artifactId>
+	    <version>3.0.8</version>
+	</dependency>
+	<dependency>
 	    <groupId>org.easymock</groupId>
 	    <artifactId>easymock</artifactId>
 	    <version>4.0.2</version>
